[package]
name = "fantasyconsole"
version = "0.1.0"
edition = "2021"
authors = ["Seu Nome <seu.email@exemplo.com>"]
description = "A PICO-8 compatible fantasy console runtime in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gapolli/fantasyconsole"
keywords = ["pico8", "emulator", "game", "retro", "fantasy-console"]
categories = ["games", "multimedia"]

[dependencies]
# Lua embedding
mlua = { version = "0.9", features = ["lua54", "vendored", "serialize"] }

# SDL2 for graphics/input
sdl2 = { version = "0.36", features = ["bundled"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Serialization for cart data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing
image = "0.24"

# Cross-thread communication
crossbeam-channel = "0.5"

# For .p8.png support (future)
png = "0.17"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"

[features]
default = []
audio = []
debug = []
hotreload = []

[[bin]]
name = "fantasyconsole"
path = "src/main.rs"

[lib]
name = "fantasyconsole"
path = "src/lib.rs"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true